# scrapbook

./: .gitignore  CMakeLists.txt  space shooter plan
Disaster/: CMakeLists.txt
Disaster/src/: main.cpp
Insanity/: CMakeLists.txt
Insanity/src/: main.cpp
cmake/: FindGLEW.cmake  FindSDL2.cmake
include/: res_path.h
res/Disaster/: basicShader.fs  basicShader.vs
